--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
     "tabWidth": 4,
-    "printWidth": 100
+    "printWidth": 100,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "semi": true
 }
