--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chunchun-db/client": "github:chunchun-db/chunchun-db_client#1.1.1",
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/data-grid": "^4.0.0-alpha.18",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.2",
